--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,17 @@
     margin-right: 7px; 
 }
 nav {
-    position: fixed; 
     display: flex; 
+    position: absolute; 
     color: white; 
     padding: 1em 0em;
     width: 100%; 
     justify-content: center; 
-    align-items: center; 
+    border-bottom: 1px solid white; 
 }
-nav div {
-    margin: 0 auto; 
+nav div{
+    display: flex; 
+    align-items: center; 
 }
 nav li {
     list-style-type: none;
@@ -54,7 +55,16 @@ button {
     color: white; 
     border: 2px solid white; 
     padding: 1em 2em; 
+    border-radius: 30px; 
+}
+.planform {
+    position: relative; 
+    z-index: 1; 
+    display: flex; 
+    bottom: 200px; 
+}
+.planform img {
     border-radius: 20px; 
-
-
+    box-shadow: 3px 3px 3px; 
+    margin: 0 auto; 
 }
